interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     primary_expression -> ID
Rule 3     primary_expression -> INTNUM
Rule 4     primary_expression -> FLOATNUM
Rule 5     primary_expression -> NORMSTRING
Rule 6     primary_expression -> ( expression )
Rule 7     primary_expression -> [ ]
Rule 8     primary_expression -> [ index_expression_list ]
Rule 9     postfix_expression -> primary_expression
Rule 10    postfix_expression -> array_expression
Rule 11    postfix_expression -> postfix_expression '
Rule 12    index_expression -> :
Rule 13    index_expression -> expression
Rule 14    index_expression_list -> index_expression
Rule 15    index_expression_list -> index_expression_list , index_expression
Rule 16    index_expression_list -> index_expression_list ; index_expression
Rule 17    print_index_expression_list -> ID
Rule 18    print_index_expression_list -> print_index_expression_list , ID
Rule 19    array_expression -> ID ( index_expression_list )
Rule 20    array_expression -> ID [ index_expression_list ]
Rule 21    unary_expression -> postfix_expression
Rule 22    unary_expression -> - postfix_expression
Rule 23    multiplicative_expression -> unary_expression
Rule 24    multiplicative_expression -> multiplicative_expression * unary_expression
Rule 25    multiplicative_expression -> multiplicative_expression / unary_expression
Rule 26    multiplicative_expression -> multiplicative_expression DOTMUL unary_expression
Rule 27    multiplicative_expression -> multiplicative_expression DOTDIV unary_expression
Rule 28    additive_expression -> multiplicative_expression
Rule 29    additive_expression -> additive_expression + multiplicative_expression
Rule 30    additive_expression -> additive_expression - multiplicative_expression
Rule 31    additive_expression -> additive_expression DOTADD multiplicative_expression
Rule 32    additive_expression -> additive_expression DOTMINUS multiplicative_expression
Rule 33    relational_expression -> additive_expression
Rule 34    relational_expression -> relational_expression < additive_expression
Rule 35    relational_expression -> relational_expression > additive_expression
Rule 36    relational_expression -> relational_expression LESSEREQ additive_expression
Rule 37    relational_expression -> relational_expression GREATEREQ additive_expression
Rule 38    equality_expression -> relational_expression
Rule 39    equality_expression -> equality_expression EQ relational_expression
Rule 40    equality_expression -> equality_expression NOTEQ relational_expression
Rule 41    special_expression -> equality_expression
Rule 42    special_expression -> PRINT print_index_expression_list
Rule 43    special_expression -> PRINT NORMSTRING
Rule 44    special_expression -> RETURN expression
Rule 45    special_expression -> CONTINUE
Rule 46    special_expression -> BREAK
Rule 47    expression -> special_expression
Rule 48    expression -> expression : special_expression
Rule 49    assignment_expression -> postfix_expression = expression
Rule 50    assignment_expression -> postfix_expression ADDASSIGN expression
Rule 51    assignment_expression -> postfix_expression SUBASSIGN expression
Rule 52    assignment_expression -> postfix_expression MULASSIGN expression
Rule 53    assignment_expression -> postfix_expression DIVASSIGN expression
Rule 54    init_expression -> ID = additive_expression
Rule 55    init_expression -> ID = ZEROS ( index_expression_list )
Rule 56    init_expression -> ID = ONES ( index_expression_list )
Rule 57    init_expression -> ID = EYE ( index_expression_list )
Rule 58    eostmt -> ,
Rule 59    eostmt -> ;
Rule 60    statement -> assignment_statement
Rule 61    statement -> expression_statement
Rule 62    statement -> selection_statement
Rule 63    statement -> iteration_statement
Rule 64    statement -> init_statement
Rule 65    statement_list -> statement
Rule 66    statement_list -> statement statement_list
Rule 67    expression_statement -> eostmt
Rule 68    expression_statement -> expression eostmt
Rule 69    assignment_statement -> assignment_expression eostmt
Rule 70    init_statement -> init_expression eostmt
Rule 71    selection_statement -> IF ( expression ) statement
Rule 72    selection_statement -> IF ( expression ) statement ELSE statement
Rule 73    selection_statement -> IF ( expression ) { statement_list }
Rule 74    selection_statement -> IF ( expression ) { statement_list } ELSE { statement_list }
Rule 75    iteration_statement -> WHILE ( expression ) { statement_list }
Rule 76    iteration_statement -> FOR ID = expression { statement_list }
Rule 77    iteration_statement -> FOR ( ID = expression ) { statement_list }

Terminals, with rules where they appear

'                    : 11
(                    : 6 19 55 56 57 71 72 73 74 75 77
)                    : 6 19 55 56 57 71 72 73 74 75 77
*                    : 24
+                    : 29
,                    : 15 18 58
-                    : 22 30
/                    : 25
:                    : 12 48
;                    : 16 59
<                    : 34
=                    : 49 54 55 56 57 76 77
>                    : 35
ADDASSIGN            : 50
BREAK                : 46
CONTINUE             : 45
DIVASSIGN            : 53
DOTADD               : 31
DOTDIV               : 27
DOTMINUS             : 32
DOTMUL               : 26
ELSE                 : 72 74
EQ                   : 39
EYE                  : 57
FLOATNUM             : 4
FOR                  : 76 77
GREATEREQ            : 37
ID                   : 2 17 18 19 20 54 55 56 57 76 77
IF                   : 71 72 73 74
INTNUM               : 3
LESSEREQ             : 36
MULASSIGN            : 52
NORMSTRING           : 5 43
NOTEQ                : 40
ONES                 : 56
PRINT                : 42 43
RETURN               : 44
SUBASSIGN            : 51
WHILE                : 75
ZEROS                : 55
[                    : 7 8 20
]                    : 7 8 20
error                : 
{                    : 73 74 74 75 76 77
}                    : 73 74 74 75 76 77

Nonterminals, with rules where they appear

additive_expression  : 29 30 31 32 33 34 35 36 37 54
array_expression     : 10
assignment_expression : 69
assignment_statement : 60
eostmt               : 67 68 69 70
equality_expression  : 39 40 41
expression           : 6 13 44 48 49 50 51 52 53 68 71 72 73 74 75 76 77
expression_statement : 61
index_expression     : 14 15 16
index_expression_list : 8 15 16 19 20 55 56 57
init_expression      : 70
init_statement       : 64
iteration_statement  : 63
multiplicative_expression : 24 25 26 27 28 29 30 31 32
postfix_expression   : 11 21 22 49 50 51 52 53
primary_expression   : 9
print_index_expression_list : 18 42
program              : 0
relational_expression : 34 35 36 37 38 39 40
selection_statement  : 62
special_expression   : 47 48
statement            : 65 66 71 72 72
statement_list       : 1 66 73 74 74 75 76 77
unary_expression     : 23 24 25 26 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (65) statement_list -> . statement
    (66) statement_list -> . statement statement_list
    (60) statement -> . assignment_statement
    (61) statement -> . expression_statement
    (62) statement -> . selection_statement
    (63) statement -> . iteration_statement
    (64) statement -> . init_statement
    (69) assignment_statement -> . assignment_expression eostmt
    (67) expression_statement -> . eostmt
    (68) expression_statement -> . expression eostmt
    (71) selection_statement -> . IF ( expression ) statement
    (72) selection_statement -> . IF ( expression ) statement ELSE statement
    (73) selection_statement -> . IF ( expression ) { statement_list }
    (74) selection_statement -> . IF ( expression ) { statement_list } ELSE { statement_list }
    (75) iteration_statement -> . WHILE ( expression ) { statement_list }
    (76) iteration_statement -> . FOR ID = expression { statement_list }
    (77) iteration_statement -> . FOR ( ID = expression ) { statement_list }
    (70) init_statement -> . init_expression eostmt
    (49) assignment_expression -> . postfix_expression = expression
    (50) assignment_expression -> . postfix_expression ADDASSIGN expression
    (51) assignment_expression -> . postfix_expression SUBASSIGN expression
    (52) assignment_expression -> . postfix_expression MULASSIGN expression
    (53) assignment_expression -> . postfix_expression DIVASSIGN expression
    (58) eostmt -> . ,
    (59) eostmt -> . ;
    (47) expression -> . special_expression
    (48) expression -> . expression : special_expression
    (54) init_expression -> . ID = additive_expression
    (55) init_expression -> . ID = ZEROS ( index_expression_list )
    (56) init_expression -> . ID = ONES ( index_expression_list )
    (57) init_expression -> . ID = EYE ( index_expression_list )
    (9) postfix_expression -> . primary_expression
    (10) postfix_expression -> . array_expression
    (11) postfix_expression -> . postfix_expression '
    (41) special_expression -> . equality_expression
    (42) special_expression -> . PRINT print_index_expression_list
    (43) special_expression -> . PRINT NORMSTRING
    (44) special_expression -> . RETURN expression
    (45) special_expression -> . CONTINUE
    (46) special_expression -> . BREAK
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . NORMSTRING
    (6) primary_expression -> . ( expression )
    (7) primary_expression -> . [ ]
    (8) primary_expression -> . [ index_expression_list ]
    (19) array_expression -> . ID ( index_expression_list )
    (20) array_expression -> . ID [ index_expression_list ]
    (38) equality_expression -> . relational_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NOTEQ relational_expression
    (33) relational_expression -> . additive_expression
    (34) relational_expression -> . relational_expression < additive_expression
    (35) relational_expression -> . relational_expression > additive_expression
    (36) relational_expression -> . relational_expression LESSEREQ additive_expression
    (37) relational_expression -> . relational_expression GREATEREQ additive_expression
    (28) additive_expression -> . multiplicative_expression
    (29) additive_expression -> . additive_expression + multiplicative_expression
    (30) additive_expression -> . additive_expression - multiplicative_expression
    (31) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (32) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (23) multiplicative_expression -> . unary_expression
    (24) multiplicative_expression -> . multiplicative_expression * unary_expression
    (25) multiplicative_expression -> . multiplicative_expression / unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (27) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (21) unary_expression -> . postfix_expression
    (22) unary_expression -> . - postfix_expression

    IF              shift and go to state 32
    WHILE           shift and go to state 7
    FOR             shift and go to state 24
    ,               shift and go to state 6
    ;               shift and go to state 21
    ID              shift and go to state 30
    PRINT           shift and go to state 9
    RETURN          shift and go to state 2
    CONTINUE        shift and go to state 36
    BREAK           shift and go to state 35
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 5
    NORMSTRING      shift and go to state 22
    (               shift and go to state 14
    [               shift and go to state 11
    -               shift and go to state 4

    expression_statement           shift and go to state 1
    unary_expression               shift and go to state 3
    init_expression                shift and go to state 10
    additive_expression            shift and go to state 12
    iteration_statement            shift and go to state 17
    selection_statement            shift and go to state 15
    assignment_statement           shift and go to state 16
    postfix_expression             shift and go to state 8
    program                        shift and go to state 18
    relational_expression          shift and go to state 19
    statement                      shift and go to state 20
    assignment_expression          shift and go to state 23
    multiplicative_expression      shift and go to state 25
    eostmt                         shift and go to state 26
    primary_expression             shift and go to state 27
    init_statement                 shift and go to state 28
    array_expression               shift and go to state 29
    equality_expression            shift and go to state 31
    special_expression             shift and go to state 33
    statement_list                 shift and go to state 37
    expression                     shift and go to state 34

state 1

    (61) statement -> expression_statement .

    IF              reduce using rule 61 (statement -> expression_statement .)
    WHILE           reduce using rule 61 (statement -> expression_statement .)
    FOR             reduce using rule 61 (statement -> expression_statement .)
    ,               reduce using rule 61 (statement -> expression_statement .)
    ;               reduce using rule 61 (statement -> expression_statement .)
    ID              reduce using rule 61 (statement -> expression_statement .)
    PRINT           reduce using rule 61 (statement -> expression_statement .)
    RETURN          reduce using rule 61 (statement -> expression_statement .)
    CONTINUE        reduce using rule 61 (statement -> expression_statement .)
    BREAK           reduce using rule 61 (statement -> expression_statement .)
    INTNUM          reduce using rule 61 (statement -> expression_statement .)
    FLOATNUM        reduce using rule 61 (statement -> expression_statement .)
    NORMSTRING      reduce using rule 61 (statement -> expression_statement .)
    (               reduce using rule 61 (statement -> expression_statement .)
    [               reduce using rule 61 (statement -> expression_statement .)
    -               reduce using rule 61 (statement -> expression_statement .)
    $end            reduce using rule 61 (statement -> expression_statement .)
    ELSE            reduce using rule 61 (statement -> expression_statement .)
    }               reduce using rule 61 (statement -> expression_statement .)


state 2

    (44) special_expression -> RETURN . expression
    (47) expression -> . special_expression
    (48) expression -> . expression : special_expression
    (41) special_expression -> . equality_expression
    (42) special_expression -> . PRINT print_index_expression_list
    (43) special_expression -> . PRINT NORMSTRING
    (44) special_expression -> . RETURN expression
    (45) special_expression -> . CONTINUE
    (46) special_expression -> . BREAK
    (38) equality_expression -> . relational_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NOTEQ relational_expression
    (33) relational_expression -> . additive_expression
    (34) relational_expression -> . relational_expression < additive_expression
    (35) relational_expression -> . relational_expression > additive_expression
    (36) relational_expression -> . relational_expression LESSEREQ additive_expression
    (37) relational_expression -> . relational_expression GREATEREQ additive_expression
    (28) additive_expression -> . multiplicative_expression
    (29) additive_expression -> . additive_expression + multiplicative_expression
    (30) additive_expression -> . additive_expression - multiplicative_expression
    (31) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (32) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (23) multiplicative_expression -> . unary_expression
    (24) multiplicative_expression -> . multiplicative_expression * unary_expression
    (25) multiplicative_expression -> . multiplicative_expression / unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (27) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (21) unary_expression -> . postfix_expression
    (22) unary_expression -> . - postfix_expression
    (9) postfix_expression -> . primary_expression
    (10) postfix_expression -> . array_expression
    (11) postfix_expression -> . postfix_expression '
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . NORMSTRING
    (6) primary_expression -> . ( expression )
    (7) primary_expression -> . [ ]
    (8) primary_expression -> . [ index_expression_list ]
    (19) array_expression -> . ID ( index_expression_list )
    (20) array_expression -> . ID [ index_expression_list ]

    PRINT           shift and go to state 9
    RETURN          shift and go to state 2
    CONTINUE        shift and go to state 36
    BREAK           shift and go to state 35
    -               shift and go to state 4
    ID              shift and go to state 39
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 5
    NORMSTRING      shift and go to state 22
    (               shift and go to state 14
    [               shift and go to state 11

    unary_expression               shift and go to state 3
    special_expression             shift and go to state 33
    array_expression               shift and go to state 29
    multiplicative_expression      shift and go to state 25
    postfix_expression             shift and go to state 38
    equality_expression            shift and go to state 31
    relational_expression          shift and go to state 19
    expression                     shift and go to state 40
    additive_expression            shift and go to state 12
    primary_expression             shift and go to state 27

state 3

    (23) multiplicative_expression -> unary_expression .

    *               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    /               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    DOTMUL          reduce using rule 23 (multiplicative_expression -> unary_expression .)
    DOTDIV          reduce using rule 23 (multiplicative_expression -> unary_expression .)
    +               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    -               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    DOTADD          reduce using rule 23 (multiplicative_expression -> unary_expression .)
    DOTMINUS        reduce using rule 23 (multiplicative_expression -> unary_expression .)
    <               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    >               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    LESSEREQ        reduce using rule 23 (multiplicative_expression -> unary_expression .)
    GREATEREQ       reduce using rule 23 (multiplicative_expression -> unary_expression .)
    EQ              reduce using rule 23 (multiplicative_expression -> unary_expression .)
    NOTEQ           reduce using rule 23 (multiplicative_expression -> unary_expression .)
    :               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    ,               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    ;               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    ]               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    )               reduce using rule 23 (multiplicative_expression -> unary_expression .)
    {               reduce using rule 23 (multiplicative_expression -> unary_expression .)


state 4

    (22) unary_expression -> - . postfix_expression
    (9) postfix_expression -> . primary_expression
    (10) postfix_expression -> . array_expression
    (11) postfix_expression -> . postfix_expression '
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . NORMSTRING
    (6) primary_expression -> . ( expression )
    (7) primary_expression -> . [ ]
    (8) primary_expression -> . [ index_expression_list ]
    (19) array_expression -> . ID ( index_expression_list )
    (20) array_expression -> . ID [ index_expression_list ]

    ID              shift and go to state 39
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 5
    NORMSTRING      shift and go to state 22
    (               shift and go to state 14
    [               shift and go to state 11

    array_expression               shift and go to state 29
    primary_expression             shift and go to state 27
    postfix_expression             shift and go to state 41

state 5

    (4) primary_expression -> FLOATNUM .

    '               reduce using rule 4 (primary_expression -> FLOATNUM .)
    *               reduce using rule 4 (primary_expression -> FLOATNUM .)
    /               reduce using rule 4 (primary_expression -> FLOATNUM .)
    DOTMUL          reduce using rule 4 (primary_expression -> FLOATNUM .)
    DOTDIV          reduce using rule 4 (primary_expression -> FLOATNUM .)
    +               reduce using rule 4 (primary_expression -> FLOATNUM .)
    -               reduce using rule 4 (primary_expression -> FLOATNUM .)
    DOTADD          reduce using rule 4 (primary_expression -> FLOATNUM .)
    DOTMINUS        reduce using rule 4 (primary_expression -> FLOATNUM .)
    <               reduce using rule 4 (primary_expression -> FLOATNUM .)
    >               reduce using rule 4 (primary_expression -> FLOATNUM .)
    LESSEREQ        reduce using rule 4 (primary_expression -> FLOATNUM .)
    GREATEREQ       reduce using rule 4 (primary_expression -> FLOATNUM .)
    EQ              reduce using rule 4 (primary_expression -> FLOATNUM .)
    NOTEQ           reduce using rule 4 (primary_expression -> FLOATNUM .)
    {               reduce using rule 4 (primary_expression -> FLOATNUM .)
    :               reduce using rule 4 (primary_expression -> FLOATNUM .)
    ]               reduce using rule 4 (primary_expression -> FLOATNUM .)
    ,               reduce using rule 4 (primary_expression -> FLOATNUM .)
    ;               reduce using rule 4 (primary_expression -> FLOATNUM .)
    =               reduce using rule 4 (primary_expression -> FLOATNUM .)
    ADDASSIGN       reduce using rule 4 (primary_expression -> FLOATNUM .)
    SUBASSIGN       reduce using rule 4 (primary_expression -> FLOATNUM .)
    MULASSIGN       reduce using rule 4 (primary_expression -> FLOATNUM .)
    DIVASSIGN       reduce using rule 4 (primary_expression -> FLOATNUM .)
    )               reduce using rule 4 (primary_expression -> FLOATNUM .)


state 6

    (58) eostmt -> , .

    IF              reduce using rule 58 (eostmt -> , .)
    WHILE           reduce using rule 58 (eostmt -> , .)
    FOR             reduce using rule 58 (eostmt -> , .)
    ,               reduce using rule 58 (eostmt -> , .)
    ;               reduce using rule 58 (eostmt -> , .)
    ID              reduce using rule 58 (eostmt -> , .)
    PRINT           reduce using rule 58 (eostmt -> , .)
    RETURN          reduce using rule 58 (eostmt -> , .)
    CONTINUE        reduce using rule 58 (eostmt -> , .)
    BREAK           reduce using rule 58 (eostmt -> , .)
    INTNUM          reduce using rule 58 (eostmt -> , .)
    FLOATNUM        reduce using rule 58 (eostmt -> , .)
    NORMSTRING      reduce using rule 58 (eostmt -> , .)
    (               reduce using rule 58 (eostmt -> , .)
    [               reduce using rule 58 (eostmt -> , .)
    -               reduce using rule 58 (eostmt -> , .)
    }               reduce using rule 58 (eostmt -> , .)
    $end            reduce using rule 58 (eostmt -> , .)
    ELSE            reduce using rule 58 (eostmt -> , .)


state 7

    (75) iteration_statement -> WHILE . ( expression ) { statement_list }

    (               shift and go to state 42


state 8

    (49) assignment_expression -> postfix_expression . = expression
    (50) assignment_expression -> postfix_expression . ADDASSIGN expression
    (51) assignment_expression -> postfix_expression . SUBASSIGN expression
    (52) assignment_expression -> postfix_expression . MULASSIGN expression
    (53) assignment_expression -> postfix_expression . DIVASSIGN expression
    (11) postfix_expression -> postfix_expression . '
    (21) unary_expression -> postfix_expression .

    =               shift and go to state 45
    ADDASSIGN       shift and go to state 48
    SUBASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 47
    DIVASSIGN       shift and go to state 46
    '               shift and go to state 44
    *               reduce using rule 21 (unary_expression -> postfix_expression .)
    /               reduce using rule 21 (unary_expression -> postfix_expression .)
    DOTMUL          reduce using rule 21 (unary_expression -> postfix_expression .)
    DOTDIV          reduce using rule 21 (unary_expression -> postfix_expression .)
    +               reduce using rule 21 (unary_expression -> postfix_expression .)
    -               reduce using rule 21 (unary_expression -> postfix_expression .)
    DOTADD          reduce using rule 21 (unary_expression -> postfix_expression .)
    DOTMINUS        reduce using rule 21 (unary_expression -> postfix_expression .)
    <               reduce using rule 21 (unary_expression -> postfix_expression .)
    >               reduce using rule 21 (unary_expression -> postfix_expression .)
    LESSEREQ        reduce using rule 21 (unary_expression -> postfix_expression .)
    GREATEREQ       reduce using rule 21 (unary_expression -> postfix_expression .)
    EQ              reduce using rule 21 (unary_expression -> postfix_expression .)
    NOTEQ           reduce using rule 21 (unary_expression -> postfix_expression .)
    :               reduce using rule 21 (unary_expression -> postfix_expression .)
    ,               reduce using rule 21 (unary_expression -> postfix_expression .)
    ;               reduce using rule 21 (unary_expression -> postfix_expression .)


state 9

    (42) special_expression -> PRINT . print_index_expression_list
    (43) special_expression -> PRINT . NORMSTRING
    (17) print_index_expression_list -> . ID
    (18) print_index_expression_list -> . print_index_expression_list , ID

    NORMSTRING      shift and go to state 51
    ID              shift and go to state 50

    print_index_expression_list    shift and go to state 49

state 10

    (70) init_statement -> init_expression . eostmt
    (58) eostmt -> . ,
    (59) eostmt -> . ;

    ,               shift and go to state 6
    ;               shift and go to state 21

    eostmt                         shift and go to state 52

state 11

    (7) primary_expression -> [ . ]
    (8) primary_expression -> [ . index_expression_list ]
    (14) index_expression_list -> . index_expression
    (15) index_expression_list -> . index_expression_list , index_expression
    (16) index_expression_list -> . index_expression_list ; index_expression
    (12) index_expression -> . :
    (13) index_expression -> . expression
    (47) expression -> . special_expression
    (48) expression -> . expression : special_expression
    (41) special_expression -> . equality_expression
    (42) special_expression -> . PRINT print_index_expression_list
    (43) special_expression -> . PRINT NORMSTRING
    (44) special_expression -> . RETURN expression
    (45) special_expression -> . CONTINUE
    (46) special_expression -> . BREAK
    (38) equality_expression -> . relational_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NOTEQ relational_expression
    (33) relational_expression -> . additive_expression
    (34) relational_expression -> . relational_expression < additive_expression
    (35) relational_expression -> . relational_expression > additive_expression
    (36) relational_expression -> . relational_expression LESSEREQ additive_expression
    (37) relational_expression -> . relational_expression GREATEREQ additive_expression
    (28) additive_expression -> . multiplicative_expression
    (29) additive_expression -> . additive_expression + multiplicative_expression
    (30) additive_expression -> . additive_expression - multiplicative_expression
    (31) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (32) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (23) multiplicative_expression -> . unary_expression
    (24) multiplicative_expression -> . multiplicative_expression * unary_expression
    (25) multiplicative_expression -> . multiplicative_expression / unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (27) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (21) unary_expression -> . postfix_expression
    (22) unary_expression -> . - postfix_expression
    (9) postfix_expression -> . primary_expression
    (10) postfix_expression -> . array_expression
    (11) postfix_expression -> . postfix_expression '
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . NORMSTRING
    (6) primary_expression -> . ( expression )
    (7) primary_expression -> . [ ]
    (8) primary_expression -> . [ index_expression_list ]
    (19) array_expression -> . ID ( index_expression_list )
    (20) array_expression -> . ID [ index_expression_list ]

    ]               shift and go to state 53
    :               shift and go to state 54
    PRINT           shift and go to state 9
    RETURN          shift and go to state 2
    CONTINUE        shift and go to state 36
    BREAK           shift and go to state 35
    -               shift and go to state 4
    ID              shift and go to state 39
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 5
    NORMSTRING      shift and go to state 22
    (               shift and go to state 14
    [               shift and go to state 11

    unary_expression               shift and go to state 3
    special_expression             shift and go to state 33
    array_expression               shift and go to state 29
    multiplicative_expression      shift and go to state 25
    index_expression_list          shift and go to state 55
    postfix_expression             shift and go to state 38
    additive_expression            shift and go to state 12
    index_expression               shift and go to state 56
    primary_expression             shift and go to state 27
    expression                     shift and go to state 57
    equality_expression            shift and go to state 31
    relational_expression          shift and go to state 19

state 12

    (33) relational_expression -> additive_expression .
    (29) additive_expression -> additive_expression . + multiplicative_expression
    (30) additive_expression -> additive_expression . - multiplicative_expression
    (31) additive_expression -> additive_expression . DOTADD multiplicative_expression
    (32) additive_expression -> additive_expression . DOTMINUS multiplicative_expression

    <               reduce using rule 33 (relational_expression -> additive_expression .)
    >               reduce using rule 33 (relational_expression -> additive_expression .)
    LESSEREQ        reduce using rule 33 (relational_expression -> additive_expression .)
    GREATEREQ       reduce using rule 33 (relational_expression -> additive_expression .)
    EQ              reduce using rule 33 (relational_expression -> additive_expression .)
    NOTEQ           reduce using rule 33 (relational_expression -> additive_expression .)
    :               reduce using rule 33 (relational_expression -> additive_expression .)
    ,               reduce using rule 33 (relational_expression -> additive_expression .)
    ;               reduce using rule 33 (relational_expression -> additive_expression .)
    ]               reduce using rule 33 (relational_expression -> additive_expression .)
    )               reduce using rule 33 (relational_expression -> additive_expression .)
    {               reduce using rule 33 (relational_expression -> additive_expression .)
    +               shift and go to state 58
    -               shift and go to state 59
    DOTADD          shift and go to state 60
    DOTMINUS        shift and go to state 61


state 13

    (3) primary_expression -> INTNUM .

    '               reduce using rule 3 (primary_expression -> INTNUM .)
    *               reduce using rule 3 (primary_expression -> INTNUM .)
    /               reduce using rule 3 (primary_expression -> INTNUM .)
    DOTMUL          reduce using rule 3 (primary_expression -> INTNUM .)
    DOTDIV          reduce using rule 3 (primary_expression -> INTNUM .)
    +               reduce using rule 3 (primary_expression -> INTNUM .)
    -               reduce using rule 3 (primary_expression -> INTNUM .)
    DOTADD          reduce using rule 3 (primary_expression -> INTNUM .)
    DOTMINUS        reduce using rule 3 (primary_expression -> INTNUM .)
    <               reduce using rule 3 (primary_expression -> INTNUM .)
    >               reduce using rule 3 (primary_expression -> INTNUM .)
    LESSEREQ        reduce using rule 3 (primary_expression -> INTNUM .)
    GREATEREQ       reduce using rule 3 (primary_expression -> INTNUM .)
    EQ              reduce using rule 3 (primary_expression -> INTNUM .)
    NOTEQ           reduce using rule 3 (primary_expression -> INTNUM .)
    {               reduce using rule 3 (primary_expression -> INTNUM .)
    :               reduce using rule 3 (primary_expression -> INTNUM .)
    ]               reduce using rule 3 (primary_expression -> INTNUM .)
    ,               reduce using rule 3 (primary_expression -> INTNUM .)
    ;               reduce using rule 3 (primary_expression -> INTNUM .)
    =               reduce using rule 3 (primary_expression -> INTNUM .)
    ADDASSIGN       reduce using rule 3 (primary_expression -> INTNUM .)
    SUBASSIGN       reduce using rule 3 (primary_expression -> INTNUM .)
    MULASSIGN       reduce using rule 3 (primary_expression -> INTNUM .)
    DIVASSIGN       reduce using rule 3 (primary_expression -> INTNUM .)
    )               reduce using rule 3 (primary_expression -> INTNUM .)


state 14

    (6) primary_expression -> ( . expression )
    (47) expression -> . special_expression
    (48) expression -> . expression : special_expression
    (41) special_expression -> . equality_expression
    (42) special_expression -> . PRINT print_index_expression_list
    (43) special_expression -> . PRINT NORMSTRING
    (44) special_expression -> . RETURN expression
    (45) special_expression -> . CONTINUE
    (46) special_expression -> . BREAK
    (38) equality_expression -> . relational_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NOTEQ relational_expression
    (33) relational_expression -> . additive_expression
    (34) relational_expression -> . relational_expression < additive_expression
    (35) relational_expression -> . relational_expression > additive_expression
    (36) relational_expression -> . relational_expression LESSEREQ additive_expression
    (37) relational_expression -> . relational_expression GREATEREQ additive_expression
    (28) additive_expression -> . multiplicative_expression
    (29) additive_expression -> . additive_expression + multiplicative_expression
    (30) additive_expression -> . additive_expression - multiplicative_expression
    (31) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (32) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (23) multiplicative_expression -> . unary_expression
    (24) multiplicative_expression -> . multiplicative_expression * unary_expression
    (25) multiplicative_expression -> . multiplicative_expression / unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (27) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (21) unary_expression -> . postfix_expression
    (22) unary_expression -> . - postfix_expression
    (9) postfix_expression -> . primary_expression
    (10) postfix_expression -> . array_expression
    (11) postfix_expression -> . postfix_expression '
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . NORMSTRING
    (6) primary_expression -> . ( expression )
    (7) primary_expression -> . [ ]
    (8) primary_expression -> . [ index_expression_list ]
    (19) array_expression -> . ID ( index_expression_list )
    (20) array_expression -> . ID [ index_expression_list ]

    PRINT           shift and go to state 9
    RETURN          shift and go to state 2
    CONTINUE        shift and go to state 36
    BREAK           shift and go to state 35
    -               shift and go to state 4
    ID              shift and go to state 39
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 5
    NORMSTRING      shift and go to state 22
    (               shift and go to state 14
    [               shift and go to state 11

    unary_expression               shift and go to state 3
    special_expression             shift and go to state 33
    array_expression               shift and go to state 29
    multiplicative_expression      shift and go to state 25
    postfix_expression             shift and go to state 38
    equality_expression            shift and go to state 31
    relational_expression          shift and go to state 19
    expression                     shift and go to state 62
    additive_expression            shift and go to state 12
    primary_expression             shift and go to state 27

state 15

    (62) statement -> selection_statement .
